--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: py
+name: Afvalkalender
 on:
   push:
     branches:
     - main
   schedule:
-  - cron: "0 * * * *"
+  - cron: "0 8 * * *"
     
 jobs:
   afvalkalender:
